--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/contacts": "^4.17.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/facebook": "^4.15.0",
+    "@ionic-native/file-transfer": "^4.19.0",
     "@ionic-native/in-app-browser": "^4.18.0",
     "@ionic-native/network": "^4.17.0",
     "@ionic-native/push": "^4.18.0",
@@ -33,32 +34,36 @@
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic-native/twitter-connect": "^4.18.0",
     "@ionic/storage": "2.2.0",
-    "cordova-android": "^7.0.0",
+    "cordova-android": "^7.1.4",
     "cordova-android-support-gradle-release": "^1.4.7",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^3.2.0",
-    "cordova-plugin-inappbrowser": "3.0.0",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.3",
+    "cordova-support-google-services": "^1.1.0",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "^5.7.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ng2-cordova-oauth": "0.0.8",
-    "phonegap-plugin-push": "^2.1.3",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "^2.2.3",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "twitter-connect-plugin": "git+https://github.com/chroa/twitter-connect-plugin.git",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.1",
     "@ionic/lab": "1.0.11",
     "typescript": "~2.6.2"
   },
@@ -81,7 +86,9 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-contacts": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
+      },
       "twitter-connect-plugin": {
         "FABRIC_KEY": "0d182705f909d5f12a4322512d019671b073aa82",
         "TWITTER_KEY": "CJYzQv4uPX98iTCOYbTBGSbpK",
@@ -90,8 +97,10 @@
       "cordova-plugin-camera": {},
       "phonegap-plugin-push": {
         "SENDER_ID": "454166531047",
-        "FCM_VERSION": "11.6.2"
-      }
+        "FCM_VERSION": "11.6.2",
+        "ANDROID_SUPPORT_V13_VERSION": "27.+"
+      },
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android"
